# libraries/nestjs-libraries/src/dtos/federation/authorize-federation.dto.ts
@@ -1,0 +1,67 @@
+import { IsDefined, IsIn, IsOptional, IsString, IsUrl } from 'class-validator';
+
+export class AuthorizeFederationQueryDto {
+  @IsString()
+  @IsDefined()
+  @IsIn(['code'])
+  response_type: string;
+
+  @IsString()
+  @IsDefined()
+  @IsUrl({ require_tld: false })
+  redirect_uri: string;
+
+  @IsString()
+  @IsOptional()
+  state?: string;
+
+  @IsString()
+  @IsOptional()
+  nonce?: string;
+
+  @IsString()
+  @IsOptional()
+  code_challenge?: string;
+
+  @IsString()
+  @IsOptional()
+  @IsIn(['S256'])
+  code_challenge_method?: string;
+
+  @IsString()
+  @IsOptional()
+  scope?: string;
+}
+
+export class ApproveFederationDto {
+  @IsString()
+  @IsDefined()
+  @IsIn(['approve', 'deny'])
+  action: 'approve' | 'deny';
+
+  @IsString()
+  @IsDefined()
+  @IsUrl({ require_tld: false })
+  redirect_uri: string;
+
+  @IsString()
+  @IsOptional()
+  state?: string;
+
+  @IsString()
+  @IsOptional()
+  nonce?: string;
+
+  @IsString()
+  @IsOptional()
+  code_challenge?: string;
+
+  @IsString()
+  @IsOptional()
+  @IsIn(['S256'])
+  code_challenge_method?: string;
+
+  @IsString()
+  @IsOptional()
+  scope?: string;
+}
